2010-10-25   <neal@bcn.boulder.co.us>

	* Add preliminary support for exporting vote count data in Election Markup Language (EML) 510 format
	* Add support for importing Hart and Sequoia CSV files
	* Work on importing from California's StateWide DataBase (http://swdb.berkeley.edu/)
	* Support for ballot counts in AuditUnit object
	* Fix bug - invalid cached statistics used if proportion changed
	* Update ToDo and README
	* Provide untested install.bat file for installing under windows
	* Add copyrights to LICENSE
	* Highlight selected contests in yellow
	* Use "th" tag for headings in audit reports
	* TestT0: more robust selection of contest and contestbatch to test
	* Comment out some columns in reports
	* Note that for code changes committed, most recent is 2009-11-23, except for some testing code and comments
	* Drop unused -v (--verbose) option in parser.py: conflicts with --verbosity in Django 1.1 (r9110)

2008-12-04    <neal@bcn.boulder.co.us>

	* setup.py: version 0.9

	* electionaudits/models.py (Contest.select_units): 
	Add "selected" field to Contest
	Use selected contests, rather than hard-coding selections in results view.
	Factor out /reports/ code to provide a list of contest_batches for
	the contest.

	* electionaudits/views.py (results): 
	Add /results/ view to show main results and statistics.
	Use selected contests, rather than hard-coding selections
	
	(Contest.stats): 
	Add stats() parameters to override confidence or s (WPM) values.

	* doc/index.html: 
	Bring project home page under source control
	
	* electionaudits/tests.py (TestCsv.test_csv):
	Add csv test
	Add tests for /selections/ and /results/, including selection and
	random seed

	* root/templates/base.html: 
	Fix html validation error: commented-out </p>
	
2008-11-15    <neal@bcn.boulder.co.us>

	This is the state of the software as it was used to publish
	the initial reports and selections on Thursday/Friday.
	
	* electionaudits/templates/electionaudits/reports.html: 