@@ -17,3 +17,4 @@ admin.site.register(Contest)
 admin.site.register(ContestBatch)
 admin.site.register(Choice)
 admin.site.register(VoteCount, VoteCountAdmin)
+admin.site.register(Margin)
