@@ -2,7 +2,7 @@
 
 {% block content %}
     <h2>Contest List</h2>
-<table border="border" cellpadding="5">
+<table () border="1" cellpadding="5">
 <tbody>
         {% for contest in object_list %}
 <tr>
