@@ -2,7 +2,7 @@
 
 {% block content %}
     <h2>Vote Count List</h2>
-<table border="border" cellpadding="5">
+<table border="1" cellpadding="5">
 <tbody>
         {% for votecount in votecounts_list %}
 <tr>
