@@ -37,7 +37,7 @@
 <p>See <a href="#stats">additional statistical information below...</a></p>
 
 
-<table border="border" cellpadding="5">
+<table border="1" cellpadding="5">
 <thead>
  
   
