@@ -45,7 +45,7 @@ See <a href="http://people.csail.mit.edu/rivest/AslamPopaRivest-OnAuditingElecti
 On Auditing Elections When Precincts Have Different Sizes, by Javed
 A. Aslam, Raluca A. Popa and Ronald L. Rivest</a></p>
 
-<table border="border" cellpadding="5">
+<table border="1" cellpadding="5">
 <thead>
 <tr>
  <th>Contest Name</th>
