@@ -90,7 +90,7 @@ statistics and dice throws to the final selections with a simple calculator.
 <h3>Detailed results</h3>
 <p>For each audit unit in the detailed results below, the counts for each choice are listed - first the reported count, then the hand count.</p>
 
-<table border="border" cellpadding="5">
+<table border="1" cellpadding="5">
 <thead>
   <tr>
    <th>Contest</th>
