@@ -72,7 +72,7 @@ not yet available.</p>
 <h3>Detailed results</h3>
 <p>For each audit unit in the detailed results below, the counts for each choice are listed - first the reported count, then the hand count.</p>
 
-<table border="border" cellpadding="5">
+<table border="1" cellpadding="5">
 <thead>
   <tr>
    <th>Contest</th>
