@@ -41,7 +41,7 @@
 <p>Select the top 1 audit units.</p>
 
 
-<table border="border" cellpadding="5">
+<table border="1" cellpadding="5">
 <thead>
  
   
